--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="index.css">
 </head>
 <body class="bg-[#FCFAFA] text-[#2C2C2C]">
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="index.tsx"></script>
+<h1>TEST</h1>
 </body>
 </html>
